// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar match snapshot SideBarStateFalse 1`] = `
<div>
  <div
    class="MuiCollapse-root MuiCollapse-horizontal css-gvgdin-MuiCollapse-root"
    data-testid="sidebarMenu"
    style="min-width: 66px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-horizontal css-13s43c2-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-horizontal css-rvg14k-MuiCollapse-wrapperInner"
      >
        <div
          class="css-1b00w0w"
          style="width: inherit;"
        >
          <a
            href="/admin/settings/scope/catalogs"
          >
            <div
              class="css-fqqimh"
            >
              <div
                class="css-1buwrg5"
              >
                <img
                  alt="Logo"
                  data-nimg="1"
                  decoding="async"
                  height="29"
                  loading="lazy"
                  src="/images/LogoBlinkExtended.svg"
                  style="color: transparent;"
                  width="104"
                />
              </div>
              <div
                class="css-qzjp43"
                style="opacity: 0;"
              >
                <img
                  alt="Logo"
                  data-nimg="1"
                  decoding="async"
                  height="29"
                  loading="lazy"
                  src="/images/LogoBlinkCollapse.svg"
                  style="color: transparent;"
                  width="31"
                />
              </div>
            </div>
          </a>
          <div
            class="css-vvth4x"
          >
            <div
              class="css-j7qwjs"
            >
              <div
                class="css-hshm0p"
                data-testid="menuGroup"
              >
                <div
                  class="css-tfem9q"
                  data-testid="menuItemIcon"
                >
                  <a
                    class="css-11ylqoy"
                    href="/admin/dashboard"
                  >
                    <ion-icon
                      src="/images/home2.svg"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                      data-testid="labelMenuItemIcon"
                    >
                      Tableau de bord
                    </span>
                  </a>
                </div>
                <div
                  class="css-dsnyvo"
                  data-testid="menuGroupLinks"
                />
              </div>
              <div
                class="css-hshm0p"
                data-testid="menuGroup"
              >
                <div
                  class="css-jbglvz"
                  data-testid="menuItemIcon"
                >
                  <ion-icon
                    name="analytics"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                    data-testid="labelMenuItemIcon"
                  >
                    Analyse
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                  data-testid="menuGroupLinks"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ooj8e9"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/analyze/results"
                            >
                              Résultats
                            </a>
                            <div
                              class="css-ukifpj"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/analyze/search_usage"
                            >
                              Utilisation de la recherche
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/analyze/ab_testing"
                            >
                              Tests A/B
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-hshm0p"
                data-testid="menuGroup"
              >
                <div
                  class="css-jbglvz"
                  data-testid="menuItemIcon"
                >
                  <ion-icon
                    name="funnel-outline"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                    data-testid="labelMenuItemIcon"
                  >
                    Merchandising
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                  data-testid="menuGroupLinks"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/merchandize/categories"
                            >
                              Catégories
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/merchandize/search_results"
                            >
                              Résultats de recherche
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          data-testid="subGroupMenu"
                          style="position: relative;"
                        >
                          <button
                            class="css-i4yvhb"
                            data-testid="menuItemChildrenButton"
                            style="transition: all 500ms; position: relative;"
                          >
                            Recommendations
                            <ion-icon
                              name="chevron-down"
                              style="transition: all 500ms;"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1o2vj7t-MuiCollapse-root"
                          data-testid="menuItemChildren"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1642zpf-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-xxknsj-MuiCollapse-wrapperInner"
                            >
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/merchandize/recommender/configuration"
                                      >
                                        Configuration générale
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/merchandize/recommender/manual_recommenders"
                                      >
                                        Recommendations manuelles
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/merchandize/recommender/auto_recommenders"
                                      >
                                        Recommendations automatiques
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/merchandize/recommender/behavioral_recommenders"
                                      >
                                        Recommendations comportementales
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/merchandize/recommender_boosts"
                            >
                              Boosts
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-hshm0p"
                data-testid="menuGroup"
              >
                <div
                  class="css-jbglvz"
                  data-testid="menuItemIcon"
                >
                  <ion-icon
                    name="search"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                    data-testid="labelMenuItemIcon"
                  >
                    Recherche
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                  data-testid="menuGroupLinks"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          data-testid="subGroupMenu"
                          style="position: relative;"
                        >
                          <button
                            class="css-i4yvhb"
                            data-testid="menuItemChildrenButton"
                            style="transition: all 500ms; position: relative;"
                          >
                            Configuration
                            <ion-icon
                              name="chevron-down"
                              style="transition: all 500ms;"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1o2vj7t-MuiCollapse-root"
                          data-testid="menuItemChildren"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1642zpf-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-xxknsj-MuiCollapse-wrapperInner"
                            >
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/search/configuration/relevance"
                                      >
                                        Pertinence
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/search/configuration/autocompletion"
                                      >
                                        Autocomplétion
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/search/configuration/attributes"
                                      >
                                        Attributs
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/search/facets"
                            >
                              Facettes
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/search/thesasurus"
                            >
                              Thésaurus
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-testid="menuGroup"
              >
                <div
                  class="css-19kw05j"
                  data-testid="menuItemIcon"
                >
                  <a
                    class="css-11ylqoy"
                    href="/admin/monitoring"
                  >
                    <ion-icon
                      name="list"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                      data-testid="labelMenuItemIcon"
                    >
                      Monitoring
                    </span>
                  </a>
                </div>
              </div>
              <div
                data-testid="menuGroup"
              >
                <div
                  class="css-19kw05j"
                  data-testid="menuItemIcon"
                >
                  <a
                    class="css-11ylqoy"
                    href="/admin/settings"
                  >
                    <ion-icon
                      name="settings-outline"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                      data-testid="labelMenuItemIcon"
                    >
                      Paramètres
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideBar match snapshot SideBarStateTrue 1`] = `
<div>
  <div
    class="MuiCollapse-root MuiCollapse-horizontal MuiCollapse-entered css-r09iak-MuiCollapse-root"
    data-testid="sidebarMenu"
    style="min-width: 278px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-horizontal css-13s43c2-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-horizontal css-rvg14k-MuiCollapse-wrapperInner"
      >
        <div
          class="css-1b00w0w"
        >
          <a
            href="/admin/settings/scope/catalogs"
          >
            <div
              class="css-fqqimh"
            >
              <div
                class="css-1buwrg5"
              >
                <img
                  alt="Logo"
                  data-nimg="1"
                  decoding="async"
                  height="29"
                  loading="lazy"
                  src="/images/LogoBlinkExtended.svg"
                  style="color: transparent;"
                  width="104"
                />
              </div>
              <div
                class="css-qzjp43"
                style="opacity: 0;"
              >
                <img
                  alt="Logo"
                  data-nimg="1"
                  decoding="async"
                  height="29"
                  loading="lazy"
                  src="/images/LogoBlinkCollapse.svg"
                  style="color: transparent;"
                  width="31"
                />
              </div>
            </div>
          </a>
          <div
            class="css-vvth4x"
          >
            <div
              class="css-j7qwjs"
            >
              <div
                class="css-hshm0p"
                data-testid="menuGroup"
              >
                <div
                  class="css-tfem9q"
                  data-testid="menuItemIcon"
                >
                  <a
                    class="css-bq1l1q"
                    href="/admin/dashboard"
                  >
                    <ion-icon
                      src="/images/home2.svg"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                      data-testid="labelMenuItemIcon"
                    >
                      Tableau de bord
                    </span>
                  </a>
                </div>
                <div
                  class="css-dsnyvo"
                  data-testid="menuGroupLinks"
                />
              </div>
              <div
                class="css-hshm0p"
                data-testid="menuGroup"
              >
                <div
                  class="css-jbglvz"
                  data-testid="menuItemIcon"
                >
                  <ion-icon
                    name="analytics"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                    data-testid="labelMenuItemIcon"
                  >
                    Analyse
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                  data-testid="menuGroupLinks"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ooj8e9"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/analyze/results"
                            >
                              Résultats
                            </a>
                            <div
                              class="css-ukifpj"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/analyze/search_usage"
                            >
                              Utilisation de la recherche
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/analyze/ab_testing"
                            >
                              Tests A/B
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-hshm0p"
                data-testid="menuGroup"
              >
                <div
                  class="css-jbglvz"
                  data-testid="menuItemIcon"
                >
                  <ion-icon
                    name="funnel-outline"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                    data-testid="labelMenuItemIcon"
                  >
                    Merchandising
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                  data-testid="menuGroupLinks"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/merchandize/categories"
                            >
                              Catégories
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/merchandize/search_results"
                            >
                              Résultats de recherche
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          data-testid="subGroupMenu"
                          style="position: relative;"
                        >
                          <button
                            class="css-i4yvhb"
                            data-testid="menuItemChildrenButton"
                            style="transition: all 500ms; position: relative;"
                          >
                            Recommendations
                            <ion-icon
                              name="chevron-down"
                              style="transition: all 500ms;"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1o2vj7t-MuiCollapse-root"
                          data-testid="menuItemChildren"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1642zpf-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-xxknsj-MuiCollapse-wrapperInner"
                            >
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/merchandize/recommender/configuration"
                                      >
                                        Configuration générale
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/merchandize/recommender/manual_recommenders"
                                      >
                                        Recommendations manuelles
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/merchandize/recommender/auto_recommenders"
                                      >
                                        Recommendations automatiques
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/merchandize/recommender/behavioral_recommenders"
                                      >
                                        Recommendations comportementales
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/merchandize/recommender_boosts"
                            >
                              Boosts
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-hshm0p"
                data-testid="menuGroup"
              >
                <div
                  class="css-jbglvz"
                  data-testid="menuItemIcon"
                >
                  <ion-icon
                    name="search"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                    data-testid="labelMenuItemIcon"
                  >
                    Recherche
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                  data-testid="menuGroupLinks"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          data-testid="subGroupMenu"
                          style="position: relative;"
                        >
                          <button
                            class="css-i4yvhb"
                            data-testid="menuItemChildrenButton"
                            style="transition: all 500ms; position: relative;"
                          >
                            Configuration
                            <ion-icon
                              name="chevron-down"
                              style="transition: all 500ms;"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1o2vj7t-MuiCollapse-root"
                          data-testid="menuItemChildren"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1642zpf-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-xxknsj-MuiCollapse-wrapperInner"
                            >
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/search/configuration/relevance"
                                      >
                                        Pertinence
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/search/configuration/autocompletion"
                                      >
                                        Autocomplétion
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                      data-testid="menuLinkItem"
                                    >
                                      <a
                                        class="css-1hn3xib"
                                        data-testid="labelMenuLinkItem"
                                        href="/admin/search/configuration/attributes"
                                      >
                                        Attributs
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/search/facets"
                            >
                              Facettes
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                            data-testid="menuLinkItem"
                          >
                            <a
                              class="css-1hn3xib"
                              data-testid="labelMenuLinkItem"
                              href="/admin/search/thesasurus"
                            >
                              Thésaurus
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-testid="menuGroup"
              >
                <div
                  class="css-19kw05j"
                  data-testid="menuItemIcon"
                >
                  <a
                    class="css-bq1l1q"
                    href="/admin/monitoring"
                  >
                    <ion-icon
                      name="list"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                      data-testid="labelMenuItemIcon"
                    >
                      Monitoring
                    </span>
                  </a>
                </div>
              </div>
              <div
                data-testid="menuGroup"
              >
                <div
                  class="css-19kw05j"
                  data-testid="menuItemIcon"
                >
                  <a
                    class="css-bq1l1q"
                    href="/admin/settings"
                  >
                    <ion-icon
                      name="settings-outline"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                      data-testid="labelMenuItemIcon"
                    >
                      Paramètres
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
